--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,3 +1,24 @@
+
+<div class="page-header">
+<h1>All of the Statuses</h1>
+</div>
+
+<%= link_to "Post a new status", new_status_path, class: "btn" %>
+
+<% @statuses.each do |status| %>
+<div class="status">
+  <strong><%= status.name %></strong>
+  <p><%= status.content %></p>
+  <div class="meta">
+    <%= link_to time_ago_in_words(status.created_at) + " ago", status %> | 
+    <span class="admin">
+    <%= link_to 'Edit', edit_status_path(status) %> | 
+    <%= link_to 'Delete', status, method: :delete, data: { confirm: 'Are you sure?' } %>
+    </span>
+  </div>
+</div>
+<% end %>
+<!--
 <h1>Listing statuses</h1>
 
 <table>
@@ -15,7 +36,7 @@
     <td><%= status.content %></td>
     <td><%= link_to 'Show', status %></td>
     <td><%= link_to 'Edit', edit_status_path(status) %></td>
-    <td><%= link_to 'Destroy', status, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Completely Destroy', status, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
@@ -23,3 +44,4 @@
 <br />
 
 <%= link_to 'New Status', new_status_path %>
+-->
